fix images on small screen

--- a/styles/Auth.module.scss
+++ b/styles/Auth.module.scss
@@ -6,5 +6,5 @@
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: center;
-	gap: 5vmax;
+	gap: 3vmax;
 }
